[gd_scene load_steps=35 format=3 uid="uid://vgwrcfy1qawf"]

[ext_resource type="Script" path="res://scripts/builder.gd" id="1_jybm7"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_wp8s8"]
[ext_resource type="Environment" uid="uid://jbptgqvstei3" path="res://scenes/main-environment.tres" id="1_yndf3"]
[ext_resource type="Resource" uid="uid://dv14kkhb6umkv" path="res://structures/road-straight.tres" id="2_bwyku"]
[ext_resource type="Resource" uid="uid://d2jplegnkl6u2" path="res://structures/road-corner.tres" id="3_6fpyf"]
[ext_resource type="Resource" uid="uid://mxrnqinnsqnt" path="res://structures/road-straight-lightposts.tres" id="3_o6o81"]
[ext_resource type="Resource" uid="uid://ch8vtcpine1lc" path="res://structures/pavement.tres" id="4_b632v"]
[ext_resource type="Texture2D" uid="uid://cbk07cxgshg26" path="res://sprites/selector.png" id="4_wr1wv"]
[ext_resource type="Resource" uid="uid://cntgl86ianngh" path="res://structures/building-small-a.tres" id="5_v5o2m"]
[ext_resource type="Resource" uid="uid://c5fveedgvunju" path="res://structures/building-small-b.tres" id="6_f4603"]
[ext_resource type="Resource" uid="uid://cqvwy36htu81" path="res://structures/road-split.tres" id="7_kqu4g"]
[ext_resource type="Resource" uid="uid://dveu4dnue0d54" path="res://structures/road-intersection.tres" id="8_1swhv"]
[ext_resource type="Resource" uid="uid://dqqe3iofnleup" path="res://structures/pavement-fountain.tres" id="8_4il2q"]
[ext_resource type="Script" path="res://scripts/view.gd" id="8_yovpv"]
[ext_resource type="Resource" uid="uid://tm532uesguhk" path="res://structures/grass.tres" id="9_ifw7y"]
[ext_resource type="Resource" uid="uid://bh65eqgid4kxy" path="res://structures/building-small-c.tres" id="10_84or2"]
[ext_resource type="Resource" uid="uid://ccb475jeg7ym5" path="res://structures/grass-trees.tres" id="10_vaeah"]
[ext_resource type="Resource" uid="uid://dtal0tl2ee336" path="res://structures/building-small-d.tres" id="12_8obn7"]
[ext_resource type="Resource" uid="uid://y6jafhfnhbrp" path="res://structures/grass-trees-tall.tres" id="13_t5d2v"]
[ext_resource type="Resource" uid="uid://bqb6g3t0tebno" path="res://structures/building-garage.tres" id="13_ut2cy"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="16_vlub6"]
[ext_resource type="Texture2D" uid="uid://bng0d1sou7c8a" path="res://sprites/coin.png" id="17_cjamx"]
[ext_resource type="Resource" uid="uid://cb7cyjo6fsybw" path="res://structures/factory.tres" id="17_hkhri"]
[ext_resource type="Resource" uid="uid://c65ha65kdaxei" path="res://structures/solar-panel.tres" id="18_b0jfa"]
[ext_resource type="Resource" uid="uid://6chy2tinhkta" path="res://structures/garden.tres" id="20_sf717"]
[ext_resource type="MeshLibrary" uid="uid://dm1wpflr5hgq0" path="res://scenes/mesh_library.res" id="21_g83ro"]
[ext_resource type="Texture2D" uid="uid://u0u3asxektpi" path="res://sprites/person.svg" id="24_6d7vr"]
[ext_resource type="Texture2D" uid="uid://dad6weewiwylw" path="res://sprites/button_focus.png" id="26_dkafi"]
[ext_resource type="Texture2D" uid="uid://dywkqyi2luifa" path="res://sprites/cancel.svg" id="28_e5r5h"]

[sub_resource type="LabelSettings" id="LabelSettings_q176i"]
font = ExtResource("16_vlub6")
font_size = 24
shadow_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sdnu"]
bg_color = Color(1, 0.666667, 0.145098, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7ux5"]
bg_color = Color(9.62615e-08, 0.70763, 0.658796, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81xpf"]
bg_color = Color(0.631373, 0.827451, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66jmx"]
bg_color = Color(0.905882, 0.87451, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Main" type="Node3D"]
script = ExtResource("1_wp8s8")

[node name="Builder" type="Node3D" parent="." node_paths=PackedStringArray("selector", "selector_container", "view_camera", "gridmap", "decoration_grid", "cash_display", "structure_container")]
script = ExtResource("1_jybm7")
structures = Array[Resource("res://scripts/structure.gd")]([ExtResource("2_bwyku"), ExtResource("3_o6o81"), ExtResource("3_6fpyf"), ExtResource("7_kqu4g"), ExtResource("8_1swhv"), ExtResource("4_b632v"), ExtResource("8_4il2q"), ExtResource("5_v5o2m"), ExtResource("6_f4603"), ExtResource("10_84or2"), ExtResource("12_8obn7"), ExtResource("13_ut2cy"), ExtResource("9_ifw7y"), ExtResource("10_vaeah"), ExtResource("13_t5d2v"), ExtResource("17_hkhri"), ExtResource("18_b0jfa"), ExtResource("20_sf717")])
selector = NodePath("Selector")
selector_container = NodePath("Selector/Container")
view_camera = NodePath("../View/Camera")
gridmap = NodePath("../GridMap")
decoration_grid = NodePath("../DecorationGrid")
cash_display = NodePath("../CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Cash")
structure_container = NodePath("../CanvasLayer/ScrollContainer/MarginContainer/StructureContainer")

[node name="Selector" type="Node3D" parent="Builder"]

[node name="Sprite" type="Sprite3D" parent="Builder/Selector"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.06, 0)
texture_filter = 0
texture = ExtResource("4_wr1wv")

[node name="Container" type="Node3D" parent="Builder/Selector"]

[node name="View" type="Node3D" parent="."]
transform = Transform3D(0.707107, -0.40558, 0.579228, 0, 0.819152, 0.573576, -0.707107, -0.40558, 0.579228, 0, 0, 0)
script = ExtResource("8_yovpv")

[node name="Camera" type="Camera3D" parent="View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30)
fov = 20.0

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("21_g83ro")
cell_size = Vector3(1, 1, 1)
cell_center_x = false
cell_center_y = false
cell_center_z = false

[node name="DecorationGrid" type="GridMap" parent="."]
mesh_library = ExtResource("21_g83ro")
cell_size = Vector3(1, 0.4, 1)
cell_center_x = false
cell_center_y = false
cell_center_z = false

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_yndf3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="CashIcon" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("17_cjamx")
expand_mode = 2

[node name="Cash" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "$10,000"
label_settings = SubResource("LabelSettings_q176i")

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PopulationIcon" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("24_6d7vr")
expand_mode = 2

[node name="Population" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1742"
label_settings = SubResource("LabelSettings_q176i")

[node name="HappinessProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_7sdnu")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HappinessProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Happiness"
horizontal_alignment = 1

[node name="EnergyProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_n7ux5")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/EnergyProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Energy"
horizontal_alignment = 1

[node name="EmissionsProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_81xpf")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/EmissionsProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Emissions"
horizontal_alignment = 1

[node name="WasteProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_66jmx")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/WasteProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Waste
"
horizontal_alignment = 1

[node name="HelpButton" type="Button" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("16_vlub6")
theme_override_font_sizes/font_size = 40
text = "?"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 128)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="StructureContainer" type="HBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="StructureButton" type="TextureButton" parent="CanvasLayer/ScrollContainer/MarginContainer/StructureContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_focused = ExtResource("26_dkafi")
stretch_mode = 3

[node name="HelpOverlay" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.803922)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HelpOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HelpOverlay/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]
[b]Controls[/b]

[table=2]
[cell]W, A, S, D[/cell][cell]Move camera[/cell]
[cell]F[/cell][cell]Center camera[/cell]
[cell]   Middle mouse button   [/cell][cell]Hold to rotate camera[/cell]
[cell]Left mouse button[/cell][cell]Place building[/cell]
[cell]X, Backspace, Delete[/cell][cell]Demolish building[/cell]
[cell]Q, E, Scroll up/ down[/cell][cell]Switch buildings[/cell]
[cell]F1[/cell][cell]Save[/cell]
[cell]F2[/cell][cell]Load[/cell]
[/table]

[b]Attributions[/b]

City Builder Starter Kit by Kenney 
Person icon by Delapouite under CC BY 3.0
Cancel icon by sbed under CC BY 3.0
Ultimate Crops Pack by Quaternius"

[node name="CloseButton" type="TextureButton" parent="CanvasLayer/HelpOverlay/MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("28_e5r5h")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="CanvasLayer/MarginContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HelpOverlay/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
